--- a/style.css
+++ b/style.css
@@ -30,6 +30,10 @@ body{
     margin: 5px;
     padding: 5px;
 }
+
+.caja-madre:hover{
+    color: olivedrab;
+}
 a{
     text-decoration: none;
     border: 1px solid #bdde92;
@@ -52,6 +56,7 @@ a{
     margin: 5px;
     text-align: center;
 }
+
 
 .caja-madre{
     padding: 15px;
@@ -126,9 +131,32 @@ a{
     text-decoration: solid;
     background-color: beige;
     height: 50px;
-
+    animation-name: animacion;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-delay: 3s;
 }
 
+@keyframes animacion {
+    0%{
+        color: olive;
+        font-size: 20px;
+    }
+    50%{
+        color: chartreuse;
+        font-size: 30px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+    75%{
+        color: olive;
+        font-size: 20px;
+    }
+    100%{
+        color: chartreuse;
+        font-size: 30px;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+}
 
 /* Pie de pagina  */
 footer{
